# python-static-code-analysis

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
