[tool.poetry]
name = "python-static-code-analysis"
version = "0.1.0"
description = ""
authors = ["glennlum <glennlum_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"
matplotlib = "^3.9.0"
pandas = "^2.2.2"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
